--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FANA
+    <title>turismocity
     </title>
 </head>
-<body><H1>HOLA MUNDO lindo</H1>
+<body><H1> TURISMO CITY</H1>
     
 </body>
 </html>
