--- a/fichafelipefernandez.html
+++ b/fichafelipefernandez.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Felipe Fernandez|FANA</title>
+<style> body{background-color: rgb(167, 205, 109);} 
+</style>
 </head>
 <body>
     <h1>FANA</h1>
