--- a/fichafelipefernandez.html
+++ b/fichafelipefernandez.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Felipe Fernandez|FANA</title>
-<style> body{background-color: rgb(167, 205, 109);} 
+<style> body{background-color: rgb(75, 87, 181);} 
 </style>
-</head>
+</head><HEAD>
+    <STYLE type="text/css">
+     SPAN.ver-ex { font-variant: small-caps }
+    </STYLE>
+   </HEAD>
+   <BODY>
+     <P><SPAN class="ver-ex">Ficha Personal</SPAN> 
+   </BODY>   
 <body>
     <h1>FANA</h1>
     <h2>Felipe Fernandez</h2>
-    <img src="img/fotofelipefernandez.jpg" alt="Foto de Felipe Fernandez" width="200" height="200">
+    <img src="fotofelipefernandez.jpg" alt= "Foto de Felipe Fernandez" width="200" height="200">
     <ul><li>Conocimientos:
             <ul><li>Programacion: Ninguno</li>
                 <li>Diseño: Ninguno</li>
@@ -22,5 +29,12 @@
                 <li>cocinar</li>
             </ul>
         </li></ul>
-</body>
-</html>
+    <body>
+        <p>Contactos</p>
+        <ul>
+            <li><a href="index.html">Contacto de Empresa</a></li>
+            <li><a href="felifernandez@outlook.com">Contacto Personal</a></li>
+        </ul>
+    </body><tr></tr>
+   
+   </body> <html>
