--- a/proyectofana/index.html
+++ b/proyectofana/index.html
@@ -5,19 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FANA</title>
+    <link rel="stylesheet" href="miestilo.css">
 </head> 
 <body>
-  <h1>FANA</h1>
-    <H2>Empresa de turismo</H2>
-    <p>FANA es una organización de desarrolladores, que colaboran entre sí, con el propósito de dar valor a la industria turística alrededor del mundo sin importar las fronteras culturales.
-        Nos enfocamos en brindar un servicio personalizado adecuado a las necesidades de cada uno de nuestros clientes</p>
-        
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
-            <li><a href="integrantes.html">Integrantes</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
+  <header>
+        <nav><ul>
+                 <li><a href="index.html">Home</a></li>
+                 <li><a href="servicios.html">Servicios</a></li>
+                 <li><a href="integrantes.html">Integrantes</a></li>
+                 <li><a href="contacto.html">Contacto</a></li>
+             </ul></nav>
+        <h1 class="TituloPrincipal">FANA</h1>
+             <H2 class="Titulo">Empresa de turismo</H2>
+    </header>
+    <main>
+        <div class="contenedor">
+            <p>FANA es una organización de desarrolladores, que colaboran entre sí, con el propósito de dar valor a la industria turística alrededor del mundo sin importar las fronteras culturales.
+            Nos enfocamos en brindar un servicio personalizado adecuado a las necesidades de cada uno de nuestros clientes</p>
+            </div>
+    </main>
+    <footer>
+        <p>Todos los derechos reservados</p>
+    </footer>
     
 </body> <tr></tr>
 </html>
