--- a/proyectofana/servicios.html
+++ b/proyectofana/servicios.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
+    <link rel="stylesheet" href="miestilo.css">
 </head>
 <body>
-    <h1>Servicios</h1>
+      <header>
+        <nav><ul>
+                 <li><a href="index.html">Home</a></li>
+                 <li><a href="servicios.html">Servicios</a></li>
+                 <li><a href="integrantes.html">Integrantes</a></li>
+                 <li><a href="contacto.html">Contacto</a></li>
+             </ul></nav>
+        <h1 class="TituloPrincipal">FANA</h1>
+             <H2 class="Titulo">Servicios</H2>
+    </header>
+    <footer>
+        <p>Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
