--- a/proyectofana/integrantes.html
+++ b/proyectofana/integrantes.html
@@ -5,15 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Integrantes|FANA</title>
+    <link rel="stylesheet" href="estilointegrantes.css">
 </head>
+<style> body{background-color: rgb(171, 221, 179);} 
+</style>
 <body>
     <h1>FANA</h1>
     <h2>Integrantes</h2>
-   <ul><li>Nicolas Diaz Calens</li>
-       <li>Ary Tomas Escalante</li>
-       <li>Felipe Fernandez</li><ul>
- <a href="fichaagustinafernandez.html" target="_blank">Agustina Fernandez</a>
-  
+ <ul><li><a href="fichaagustinafernandez.html" target="_blank">Agustina Fernandez</a></li>
+    <img class="foto" src="img/imgfernandezagus.jpg" alt="Foto de Agustina Fernandez">
+    <p>descripcion de cada uno</p>
+    
+    <li><a href="/fichafelipefernandez.html" target="_blank">Felipe Fernadez</a></li>
+     <img class="foto" src="?" alt="Foto de Felipe Fernandez">
+     <p>descripcion de cada uno</p>
+
+   <li><a href="/fichaPersonalAry.html" target="_blank">Ary Tomas</a></li>
+    <img class="foto" src="?" alt="Foto de Ary Tomas">
+    <p>descripcion de cada uno</p>
+
+   <li> <a href="/fichapersonalNicolasDiazCalens.html" target="_blank">Nicolas Diaz Calens</a></li>
+    <img class="foto" src="?" alt="foto de Nicolas Diaz Calens">
+    <p>descripcion de cada uno</p>
+
+
+</ul>
+
+
+
 
 
 
