--- a/proyectofana/fichafelipefernandez.html
+++ b/proyectofana/fichafelipefernandez.html
@@ -7,6 +7,7 @@
     <title>Felipe Fernandez|FANA</title>
 <style> body{background-color: rgb(215, 173, 136);} 
 </style>
+<script src="main.js" type="text/javascript"></script>
 </head><HEAD>
     <STYLE type="text/css">
      SPAN.ver-ex { font-variant: small-caps }
