--- a/proyectofana/integrantes.html
+++ b/proyectofana/integrantes.html
@@ -7,9 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Integrantes|FANA</title>
     <link rel="stylesheet" href="estilointegrantes.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&family=Sora:wght@300;500;600&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="miestilo.css">
+
+    <script src="https://kit.fontawesome.com/e64699d2ce.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
+    <header class="header"> 
+        <nav class="nav">
+            <a href="index.html" class="enlace">
+                <img src=C:\Users\wº10\Documents\GitHub\proyecto-FANA\proyectofana\img\Logo.PNG alt="" class="logo">
+            </a>
+            <ul>
+                <li><a href="index.html"> Inicio </a></li>
+                <li><a href="servicios.html"> Servicios   </a></li>
+                <li><a href="integrantes.html"> Integrantes </a></li>
+                <li><a href="contacto.html"> Contacto </a></li>
+            </ul>
+        </nav>
+    </header>
+    
     <h1>FANA</h1>
     <h2>Integrantes</h2>
     <section class="contenedor">
