Se realizan pequeños cambios

--- a/integrantes.html
+++ b/integrantes.html
@@ -5,17 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Integrantes|FANA</title>
+    <title>Integrantes | FANA</title>
     <link rel="stylesheet" href="estilointegrantes.css">
 </head>
 
 <body>
-    <h1>FANA</h1>
-
     <header class="header"> 
         <nav class="nav">
             <a href="index.html" class="enlace">
-                <img src=C:\Users\wº10\Documents\GitHub\proyecto-FANA\proyectofana\img\Logo.PNG alt="" class="logo">
+                <img src=C:\Users\wº10\Documents\GitHub\proyecto-FANA\img\Logo.PNG alt="" class="logo">
             </a>
             <ul>
                 <li><a href="index.html"> Inicio </a></li>
@@ -43,7 +41,7 @@
 
         <div class="div3">
             <a href="fichaPersonalAry.html" target="_blank">Ary Tomas</a>
-            <img class="foto" src="?" alt="Foto de Ary Tomas">
+            <img class="foto" src="./img/imgAry.jpg" alt="Foto de Ary Tomas" width="170px">
             <p>descripcion de cada uno</p>
         </div>
        
