--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto|FANA</title>
+    <title>Contacto | FANA</title>
     <link rel="stylesheet" href="miestilo.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,9 +19,8 @@
 <body>
     <header class="header"> 
         <nav class="nav">
-        
             <a href="index.html" class="enlace">
-                <img src=C:\Users\wº10\Documents\GitHub\proyecto-FANA\proyectofana\img\Logo.PNG alt="" class="logo">
+                <img src=C:\Users\wº10\Documents\GitHub\proyecto-FANA\img\Logo.PNG alt="" class="logo">
             </a>
             <ul>
                 <li><a href="index.html"> Inicio </a></li>
@@ -32,6 +31,7 @@
         </nav>
     </header>
    <main> 
+        <h2 class="TituloPagina">Servicios</h2>
         <ul><li><a href="mailto:agustinapfernandez@uade.edu.ar"> Email Agustina Fernandez</a></li>
             </ul>
     </main>
