--- a/servicios.html
+++ b/servicios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios</title>
+    <title>Servicios | FANA</title>
     <link rel="stylesheet" href="miestilo.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
     <header class="header"> 
         <nav class="nav">
             <a href="index.html" class="enlace">
-                <img src=C:\Users\wº10\Documents\GitHub\proyecto-FANA\proyectofana\img\Logo.PNG alt="" class="logo">
+                <img src=C:\Users\wº10\Documents\GitHub\proyecto-FANA\img\Logo.PNG alt="" class="logo">
             </a>
             <ul>
                 <li><a href="index.html"> Inicio </a></li>
