--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 <body>
     <header class="header"> 
         <nav class="nav">
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fa-solid fa-bars"></i>
+            </label>
             <a href="index.html" class="enlace">
                 <img src=C:\Users\wº10\Documents\GitHub\proyecto-FANA\img\Logo.PNG alt="" class="logo">
             </a>
