Cambie estilos y agregue contenido a la vista de contenidos

--- a/contacto.html
+++ b/contacto.html
@@ -30,11 +30,33 @@
             </ul>
         </nav>
     </header>
-   <main> 
-        <h2 class="TituloPagina">Servicios</h2>
-        <ul><li><a href="mailto:agustinapfernandez@uade.edu.ar"> Email Agustina Fernandez</a></li>
+    <main> 
+        <h1 class="TituloPagina">Contactate con nosotros!</h1>
+        <div class="listaContactos">
+        <ul>
+            <ul id="contacto" class="listaContactos2">
+                <li><h3>Agustina Fernandez</h3></li>
+                <li><a id="link" href="mailto:agustinapfernandez@uade.edu.ar"> Email</a></li>
+                <li><a id="link" href="https://api.whatsapp.com/send?phone=01165128497">WhatsApp</a></li>
             </ul>
-    </main>
+            <ul id="contacto" class="listaContactos2">
+                <h3>Nicolás Diaz Calens</h3>
+                <li><a id="link" href="mailto:ndiazcalens@uade.edu.ar">Email</a></li>
+                <li><a id="link" href="https://api.whatsapp.com/send?phone=01167553622">WhatsApp</a></li>
+            </ul>
+            <ul id="contacto" class="listaContactos2">
+                <h3>Felipe Fernandez</h3>
+                <li><a id="link" href="mailto:felipfernandez@uade.edu.ar">Email</a></li>
+                <li><a id="link" href="https://api.whatsapp.com/send?phone=01126671481">WhatsApp</a></li>
+            </ul>
+            <ul id="contacto" class="listaContactos2">
+                <h3>Ary Tomás Escalante</h3>
+                <li><a id="link" href="mailto:arescalante@uade.edu.ar">Email</a></li>
+                <li><a id="link" href="https://api.whatsapp.com/send?phone=01144350175">WhatsApp</a></li>
+            </ul>
+        </ul>
+        </div>
+</main>
     <footer>
         <p>Todos los derechos reservados</p>
     </footer>
