cambios en estilos

--- a/contacto.html
+++ b/contacto.html
@@ -16,8 +16,8 @@
     <script src="https://kit.fontawesome.com/e64699d2ce.js" crossorigin="anonymous"></script>
 
 </head>
-<body>
-    <header class="header"> 
+<body class="contactos">
+    <header id="header"> 
         <nav class="nav">
             <a href="index.html" class="enlace">
                 <img src=C:\Users\wº10\Documents\GitHub\proyecto-FANA\img\Logo.PNG alt="" class="logo">
