--- a/index.html
+++ b/index.html
@@ -52,5 +52,8 @@
         <p>Todos los derechos reservados</p>
     </footer>
 --> 
-</body> <tr></tr>
+<footer>
+    <p>Todos los derechos reservados</p>
+</footer>
+</body> 
 </html>
