Termine las vistas faltantes con sus respectivos estilos

--- a/fichaPersonalAry.html
+++ b/fichaPersonalAry.html
@@ -4,21 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ary Tomás Escalante|FANA</title>
-    <style>
-        body{background-color: rgb(85, 128, 85);}
+    <title>Contacto | FANA</title>
+    <link rel="stylesheet" href="miestilo.css">
 
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&family=Sora:wght@300;500;600&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="miestilo.css">
+
+    <script src="https://kit.fontawesome.com/e64699d2ce.js" crossorigin="anonymous"></script>
+
 </head>
-<body>
-    <header>
-        <ul>
-            <li>Home:
-                
-            </li>
-        </ul>
+<body class="bodyFichas">
+    <header id="header"> 
+        <nav class="nav">
+            <a href="index.html" class="enlace">
+                <img src=C:\Users\wº10\Documents\GitHub\proyecto-FANA\img\Logo.PNG alt="" class="logo">
+            </a>
+            <ul>
+                <li><a href="index.html"> Inicio </a></li>
+                <li><a href="servicios.html"> Servicios   </a></li>
+                <li><a href="integrantes.html"> Integrantes </a></li>
+                <li><a href="contacto.html"> Contacto </a></li>
+            </ul>
+        </nav>
+        <h2 class="TituloPagina">FANA</h2>
     </header>
+    <main class="mainFichas">
+        <h2 class="mainFichas">Ary Tomas Escalante</h2>
+        <img class="foto" src="./img/imgAry.jpg" alt="Foto Ary Tomas Escalante">
+    <ul><h3 class="mainFichas">Conocimientos</h3>
+            <ul><li class="mainFichas2">Programacion: Html, Css, y leve conocimiento en python</li>
+                <li class="mainFichas2">Diseño: Ninguno</li>
+            </ul>
+            <ul><h3 class="mainFichas">Hobbies</h3>
+                <li class="mainFichas2">Leer</li>
+                <li class="mainFichas2">Entrenar</li> 
+                <li class="mainFichas2">Natación</li>
+            </ul>
+    </ul>
+        <ul><h3 class="mainFichas">Contactos</h3>
 
-    
-</body>
+            <li class="mainFichas2"><a id="link" href="https://api.whatsapp.com/send?phone=01144350175">WhatsApp</a>Contacto WhatsApp</a></li> 
+            <li class="mainFichas2"><a id="link" href="mailto:arescalante@uade.edu.ar">Contacto email </a></li>
+        </ul>
+    </main>
 </html>
