--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://kit.fontawesome.com/e64699d2ce.js" crossorigin="anonymous"></script>
 
 </head> 
-<body>
+<body class="bodyIndex">
     <header class="header"> 
         <nav class="nav">
             <input type="checkbox" id="check">
@@ -33,25 +33,14 @@
             </ul>
         </nav>
     </header>
-
-
-
-
-
-
-
-<!--- 
-    <main>
-        <div class="contenedor">
+    <h2 class="TituloPagina">FANA</h2>
+     <main>
+        <div class="mainFichas">
             <p>FANA es una organización de desarrolladores, que colaboran entre sí, con el propósito de dar valor a la industria turística alrededor del mundo sin importar las fronteras culturales.
             Nos enfocamos en brindar un servicio personalizado adecuado a las necesidades de cada uno de nuestros clientes</p>
-            </div>
+        </div>
     </main>
 
-    <footer>
-        <p>Todos los derechos reservados</p>
-    </footer>
---> 
 <footer>
     <p>Todos los derechos reservados</p>
 </footer>
