--- a/integrantes.html
+++ b/integrantes.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="div1">
-            <a id="link" href="fichaPersonalAry.html">Ary Tomas</a>
+            <a id="link" href="fichaPersonalAry.html">Ary Tomas Escalante</a>
             <img class="foto" src="./img/imgAry.jpg" alt="Foto de Ary Tomas" >
         </div>
        
