--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img src=C:\Users\wº10\Documents\GitHub\proyecto-FANA\img\Logo.PNG alt="" class="logo">
             </a>
             <ul>
-                <li><a href="index.html"> Inicio </a></li>
+                <li><a class="active" href="index.html"> Inicio </a></li>
                 <li><a href="servicios.html"> Servicios   </a></li>
                 <li><a href="integrantes.html"> Integrantes </a></li>
                 <li><a href="contacto.html"> Contacto </a></li>
