cambio de src logo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <i class="fa-solid fa-bars"></i>
             </label>
             <a href="index.html" class="enlace">
-                <img src=C:\Users\wº10\Documents\GitHub\proyecto-FANA\img\Logo.PNG alt="" class="logo">
+                <img src="img/Logo.PNG" alt="" class="logo">
             </a>
             <ul>
                 <li><a class="active" href="index.html"> Inicio </a></li>
