--- a/contacto.html
+++ b/contacto.html
@@ -20,7 +20,7 @@
     <header id="header"> 
         <nav class="nav">
             <a href="index.html" class="enlace">
-                <img src=C:\Users\wº10\Documents\GitHub\proyecto-FANA\img\Logo.PNG alt="" class="logo">
+                <img src="img/Logo.PNG" alt="" class="logo">
             </a>
             <ul>
                 <li><a href="index.html"> Inicio </a></li>
