--- a/integrantes.html
+++ b/integrantes.html
@@ -21,7 +21,7 @@
     <header class="header"> 
         <nav class="nav">
             <a href="index.html" class="enlace">
-                <img src=C:\Users\wº10\Documents\GitHub\proyecto-FANA\img\Logo.PNG alt="" class="logo">
+                <img src="img/Logo.PNG" alt="" class="logo">
             </a>
             <ul>
                 <li><a href="index.html"> Inicio </a></li>
